# src/main/java/com/sgiem/ms/security/models/entity/UserCredential.java
@@ -1,7 +1,10 @@
 package com.sgiem.ms.security.models.entity;
 
+import com.fasterxml.jackson.annotation.JsonFormat;
 import jakarta.persistence.*;
 import lombok.*;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
 
 import java.io.Serializable;
 import java.util.*;
@@ -35,6 +38,21 @@ public class UserCredential implements Serializable {
 
     @Column(name = "password")
     private String password;
+
+    @Column(name = "state")
+    private String state;
+
+    @Column(name = "createTime")
+    @CreationTimestamp
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "dd-MM-yyyy", locale = "es_PE", timezone = "America/Lima")
+    @Temporal(TemporalType.TIMESTAMP)
+    private Date createTime;
+
+    @Column(name = "updateTime")
+    @UpdateTimestamp
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "dd-MM-yyyy", locale = "es_PE", timezone = "America/Lima")
+    @Temporal(TemporalType.TIMESTAMP)
+    private Date updateTime;
 
     @OneToMany(fetch = FetchType.EAGER, mappedBy = "user")
     private List<RolCredential> roles;
